Re-exported uSync files

--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-list-umbraco.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-list-umbraco.config
@@ -25,6 +25,11 @@
     <dataListUmbracoContentProperties>
       <Value><![CDATA[codeEditorJavaScript]]></Value>
     </dataListUmbracoContentProperties>
+    <dataListUmbracoContentPropertyValue>
+      <Value><![CDATA[[
+  "github"
+]]]></Value>
+    </dataListUmbracoContentPropertyValue>
     <dataListUmbracoContentTypes>
       <Value><![CDATA[umb://document-type/a36df9f115864594a85ac99259234aeb]]></Value>
     </dataListUmbracoContentTypes>
