--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/editor-notes.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/editor-notes.config
@@ -13,8 +13,17 @@
     <Template Key="07b5bd24-73d9-40e0-855a-1c1e6b794696">webPage</Template>
   </Info>
   <Properties>
-    <editorNotes>
+    <editorNotesDanger>
       <Value><![CDATA[]]></Value>
-    </editorNotes>
+    </editorNotesDanger>
+    <editorNotesDefault>
+      <Value><![CDATA[]]></Value>
+    </editorNotesDefault>
+    <editorNotesPositive>
+      <Value><![CDATA[]]></Value>
+    </editorNotesPositive>
+    <editorNotesWarning>
+      <Value><![CDATA[]]></Value>
+    </editorNotesWarning>
   </Properties>
 </Content>
