--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentbytes.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentbytes.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="435895c3-be34-47a5-aae5-664ed432acd2" Alias="contentmentBytes" Level="1">
   <Info>
-    <Name>Contentment Bytes</Name>
+    <Name>Bytes</Name>
     <Icon>icon-binarycode color-light-blue</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A read-only label to display file sizes in relative bytes.</Description>
