--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentcodeeditor.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentcodeeditor.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="4b082f14-749f-4bcc-a53f-739e240ee277" Alias="contentmentCodeEditor" Level="1">
   <Info>
-    <Name>Contentment Code Editor</Name>
+    <Name>Code Editor</Name>
     <Icon>icon-code color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A code snippet editor, (using the Monaco library that is bundled with Umbraco).</Description>
