--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalist.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalist.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="a36df9f1-1586-4594-a85a-c99259234aeb" Alias="contentmentDataList" Level="1">
   <Info>
-    <Name>Contentment Data List</Name>
+    <Name>Data List</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
