--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdata.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdata.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="59e89587-4b08-49b0-a7c6-ac0d49aaf5c7" Alias="contentmentDataListData" Level="1">
   <Info>
-    <Name>Contentment Data List: Data</Name>
+    <Name>Data List: Data</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
