--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdotnet.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistdotnet.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="691af129-fbd8-4c91-9cf2-b83be83388a7" Alias="contentmentDataListDotNet" Level="1">
   <Info>
-    <Name>Contentment Data List: .NET</Name>
+    <Name>Data List: .NET</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
