--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistumbraco.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistumbraco.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="7d48e286-eeec-4df6-a1dc-eb2387fb671f" Alias="contentmentDataListUmbraco" Level="1">
   <Info>
-    <Name>Contentment Data List: Umbraco</Name>
+    <Name>Data List: Umbraco</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor that combines a custom data source with a custom list editor.</Description>
@@ -31,7 +31,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>5</SortOrder>
+      <SortOrder>50</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -47,7 +47,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="umbraco/content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -63,7 +63,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>20</SortOrder>
       <Tab Alias="umbraco/content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -79,8 +79,24 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
+      <SortOrder>30</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>8b15e164-891e-4134-a270-e65790f7a3a3</Key>
+      <Name>Data List Umbraco Content Property Value</Name>
+      <Alias>dataListUmbracoContentPropertyValue</Alias>
+      <Definition>d8347563-8901-4093-bf1a-58668d002bb4</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>30</SortOrder>
+      <Tab Alias="umbraco/content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -95,7 +111,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
+      <SortOrder>20</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -111,7 +127,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
+      <SortOrder>50</SortOrder>
       <Tab Alias="umbraco/content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -127,7 +143,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -143,7 +159,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
+      <SortOrder>40</SortOrder>
       <Tab Alias="umbraco/content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -159,7 +175,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="umbraco/media">Media</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -175,7 +191,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>4</SortOrder>
+      <SortOrder>40</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -191,7 +207,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[Add member groups to test this.]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>20</SortOrder>
       <Tab Alias="umbraco/members">Members</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -207,7 +223,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[Add members to test this.]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="umbraco/members">Members</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -223,7 +239,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>4</SortOrder>
+      <SortOrder>60</SortOrder>
       <Tab Alias="umbraco/content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -239,7 +255,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>20</SortOrder>
       <Tab Alias="umbraco/users">Users</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -255,7 +271,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="umbraco/users">Users</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -271,7 +287,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[Used to populate the "Data List Umbraco Tags" editor (above).]]></Description>
-      <SortOrder>5</SortOrder>
+      <SortOrder>70</SortOrder>
       <Tab Alias="umbraco/content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -285,35 +301,35 @@
       <Caption>Schema</Caption>
       <Alias>umbraco/schema</Alias>
       <Type>Group</Type>
-      <SortOrder>4</SortOrder>
+      <SortOrder>50</SortOrder>
     </Tab>
     <Tab>
       <Key>a9de9b95-ccb8-42a0-aba3-e72f9326f4e0</Key>
       <Caption>Content</Caption>
       <Alias>umbraco/content</Alias>
       <Type>Group</Type>
-      <SortOrder>1</SortOrder>
+      <SortOrder>10</SortOrder>
     </Tab>
     <Tab>
       <Key>c2bc2eb9-9d14-48de-b2d0-35593a6bdde9</Key>
       <Caption>Members</Caption>
       <Alias>umbraco/members</Alias>
       <Type>Group</Type>
-      <SortOrder>2</SortOrder>
+      <SortOrder>30</SortOrder>
     </Tab>
     <Tab>
       <Key>cb2fd537-ac8f-47f9-9fb6-7ca677459ce0</Key>
       <Caption>Users</Caption>
       <Alias>umbraco/users</Alias>
       <Type>Group</Type>
-      <SortOrder>3</SortOrder>
+      <SortOrder>40</SortOrder>
     </Tab>
     <Tab>
       <Key>f5283b66-c644-4b1b-bf2e-93f9ebf9e175</Key>
       <Caption>Media</Caption>
       <Alias>umbraco/media</Alias>
       <Type>Group</Type>
-      <SortOrder>2</SortOrder>
+      <SortOrder>20</SortOrder>
     </Tab>
     <Tab>
       <Key>f8848ec3-9bd9-49ad-96d5-3eeddd304c39</Key>
