--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenteditornotes.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenteditornotes.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="6d193833-2332-4cee-8cfb-e66d19dde58e" Alias="contentmentEditorNotes" Level="1">
   <Info>
-    <Name>Contentment Editor Notes</Name>
+    <Name>Editor Notes</Name>
     <Icon>icon-alert color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>Similar to Notes, with enhanced UI options.</Description>
@@ -23,15 +23,63 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>d2eec2fe-c37d-48a4-93f7-f14a65d5c1ba</Key>
+      <Name>Editor Notes: Danger</Name>
+      <Alias>editorNotesDanger</Alias>
+      <Definition>2c81c3b2-3ee0-4ef2-9803-fa149d28dbb3</Definition>
+      <Type>Umbraco.Community.Contentment.Notes</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>40</SortOrder>
+      <Tab Alias="editorNotes">Editor Notes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>0d3d14b3-b895-4353-b987-2500fba8051a</Key>
-      <Name>Editor Notes</Name>
-      <Alias>editorNotes</Alias>
+      <Name>Editor Notes: Default</Name>
+      <Alias>editorNotesDefault</Alias>
       <Definition>569416cf-60c4-483a-a117-8ea8ad4bc055</Definition>
       <Type>Umbraco.Community.Contentment.Notes</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>10</SortOrder>
+      <Tab Alias="editorNotes">Editor Notes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>51989c0b-0f9b-4ee6-be98-1bbf5155189a</Key>
+      <Name>Editor Notes: Positive</Name>
+      <Alias>editorNotesPositive</Alias>
+      <Definition>2e5a7194-8a4c-4c3a-a710-a20b7c723390</Definition>
+      <Type>Umbraco.Community.Contentment.Notes</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="editorNotes">Editor Notes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>04b5ff76-faca-423b-8498-c4c901494a27</Key>
+      <Name>Editor Notes: Warning</Name>
+      <Alias>editorNotesWarning</Alias>
+      <Definition>ee43e19a-fefa-40c3-a454-f1876539cebe</Definition>
+      <Type>Umbraco.Community.Contentment.Notes</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>30</SortOrder>
       <Tab Alias="editorNotes">Editor Notes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
