--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenticonpicker.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenticonpicker.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="a1424e36-846b-4524-a05a-7ac79a057597" Alias="contentmentIconPicker" Level="1">
   <Info>
-    <Name>Contentment Icon Picker</Name>
+    <Name>Icon Picker</Name>
     <Icon>icon-palette color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor to select an icon (from the Umbraco icon library).</Description>
