--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentlistitems.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentlistitems.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="ae359f6e-8a3c-4a9c-b793-e930c86f4a2f" Alias="contentmentListItems" Level="1">
   <Info>
-    <Name>Contentment List Items</Name>
+    <Name>List Items</Name>
     <Icon>icon-fa-table-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor to manage items with a name, value, icon and description.</Description>
