--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentnumberinput.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentnumberinput.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="ffb39ef6-5518-4776-9d62-6589d246588e" Alias="contentmentNumberInput" Level="1">
   <Info>
-    <Name>Contentment Number Input</Name>
+    <Name>Number Input</Name>
     <Icon>icon-ordered-list color-light-blue</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A numeric editor, with sizing configurations.</Description>
