--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentrendermacro.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentrendermacro.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="9411dcc8-1a2c-4923-b453-6e83b3eb4b75" Alias="contentmentRenderMacro" Level="1">
   <Info>
-    <Name>Contentment Render Macro</Name>
+    <Name>Render Macro</Name>
     <Icon>icon-alert color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A read-only label dynamically generated from an Umbraco Macro.</Description>
