--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentsociallinks.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentsociallinks.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="a43358ca-b31e-4495-af53-3d600b5841b4" Alias="contentmentSocialLinks" Level="1">
   <Info>
-    <Name>Contentment Social Links</Name>
+    <Name>Social Links</Name>
     <Icon>icon-science color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>An editor to manage links for social network platforms.</Description>
