--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenttemplatedlabel.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenttemplatedlabel.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="f4dc6428-25a3-4587-bc38-8c9742ab8268" Alias="contentmentTemplatedLabel" Level="1">
   <Info>
-    <Name>Contentment Templated Label</Name>
+    <Name>Templated Label</Name>
     <Icon>icon-fa-codepen color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A display label, ideal for showing data from 3rd-party systems.</Description>
