--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenttextboxlist.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenttextboxlist.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="b63e8edc-5346-4fe6-847d-af566f539e7a" Alias="contentmentTextboxList" Level="1">
   <Info>
-    <Name>Contentment Textbox List</Name>
+    <Name>Textbox List</Name>
     <Icon>icon-layout-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A multi-textstring editor, adds a textbox for each item in a custom data source.</Description>
