--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenttextinput.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmenttextinput.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="70dd9333-2893-4df2-87df-f6bf7d054673" Alias="contentmentTextInput" Level="1">
   <Info>
-    <Name>Contentment Text Input</Name>
+    <Name>Text Input</Name>
     <Icon>icon-autofill color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A textstring editor, configurable with HTML5 options.</Description>
