--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentcontentblocks.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentcontentblocks.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="15cf8bbd-22f2-4b61-a295-18235c978614" Alias="contentmentContentBlocks" Level="1">
   <Info>
-    <Name>Contentment Content Blocks</Name>
+    <Name>Content Blocks</Name>
     <Icon>icon-fa-server color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>A block editor, configurable using element types.</Description>
