--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatapicker.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatapicker.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentType Key="be1a660e-e7b1-49b7-8101-45095e56350a" Alias="contentmentDataPicker" Level="1">
   <Info>
-    <Name>Contentment Data Picker</Name>
+    <Name>Data Picker</Name>
     <Icon>icon-fa-arrow-pointer color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description>Advanced picker editor to query a custom data source.</Description>
