--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatapicker.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatapicker.config
@@ -20,7 +20,9 @@
       <Template Key="07b5bd24-73d9-40e0-855a-1c1e6b794696">webPage</Template>
     </AllowedTemplates>
   </Info>
-  <Structure />
+  <Structure>
+    <ContentType Key="fa576d37-a4e0-4be6-bd83-ecd64ea3bf78" SortOrder="0">contentmentDataPickerPage</ContentType>
+  </Structure>
   <GenericProperties>
     <GenericProperty>
       <Key>2f56d9fd-2066-4905-9c2e-8e29c657fe10</Key>
