--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataPickerUmbracoContent.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataPickerUmbracoContent.config
@@ -12,9 +12,10 @@
       "key": "Umbraco.Community.Contentment.DataEditors.UmbracoContentDataListSource, Umbraco.Community.Contentment",
       "value": {
         "parentNode": {
-          "originAlias": "Root"
+          "originAlias": "Current"
         },
-        "sortAlphabetically": true
+        "sortAlphabetically": false,
+        "imageAlias": "image"
       }
     }
   ],
