Text Input: implemented `<datalist>`

--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/TextInputDefaultConfig.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/TextInputDefaultConfig.config
@@ -9,6 +9,12 @@
   <Config><![CDATA[{
   "append": "icon-message color-black",
   "autocomplete": "0",
+  "dataSource": [
+    {
+      "key": "Umbraco.Community.Contentment.DataEditors.CountriesDataListSource, Umbraco.Community.Contentment",
+      "value": {}
+    }
+  ],
   "items": [
     {
       "key": "Umbraco.Community.Contentment.DataEditors.UserDefinedDataListSource, Umbraco.Community.Contentment",
