Config and description tweaks

--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListUmbracoContent.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListUmbracoContent.config
@@ -12,10 +12,10 @@
       "key": "Umbraco.Community.Contentment.DataEditors.UmbracoContentDataListSource, Umbraco.Community.Contentment",
       "value": {
         "parentNode": {
-          "originKey": "9772aed6-3d82-474e-9269-f7f4c5504992",
+          "originKey": "7a17e1d4-36c6-48b0-971d-d1f09f7ae610",
           "originAlias": "ByKey"
         },
-        "sortAlphabetically": "0"
+        "sortAlphabetically": false
       }
     }
   ],
