--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListUmbracoImageCrops.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListUmbracoImageCrops.config
@@ -23,7 +23,10 @@
         "allowClear": false,
         "enableMultiple": false,
         "template": "\u003Ccontentment-info-box\r\n    type=\u0022divider\u0022\r\n    heading=\u0022{{item.name}}\u0022\r\n    icon=\u0022{{item.icon}}\u0022\u003E\u003C/contentment-info-box\u003E\r\n",
-        "listItemStyles": ""
+        "listItemStyles": "",
+        "component": [
+          "Umb.Contentment.DataListItemUi.InfoBox"
+        ]
       }
     }
   ]
