Added config for "Umbraco Data Types" data-source

--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-list-umbraco.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-list-umbraco.config
@@ -33,6 +33,9 @@
     <dataListUmbracoContentTypes>
       <Value><![CDATA[umb://document-type/a36df9f115864594a85ac99259234aeb]]></Value>
     </dataListUmbracoContentTypes>
+    <dataListUmbracoDataTypes>
+      <Value><![CDATA[umb://data-type/811269910ea34279ab0c147ea8edb107]]></Value>
+    </dataListUmbracoDataTypes>
     <dataListUmbracoDictionaryItems>
       <Value><![CDATA[3. Go]]></Value>
     </dataListUmbracoDictionaryItems>
