--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistumbraco.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/contentmentdatalistumbraco.config
@@ -31,7 +31,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>50</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -119,6 +119,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>93360fe9-a2c2-480c-8b19-9ab7c6bc5f89</Key>
+      <Name>Data List Umbraco Data Types</Name>
+      <Alias>dataListUmbracoDataTypes</Alias>
+      <Definition>81126991-0ea3-4279-ab0c-147ea8edb107</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>40</SortOrder>
+      <Tab Alias="umbraco/schema">Schema</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>3ebaa845-9cdb-4a58-94d1-2f06ba207db0</Key>
       <Name>Data List Umbraco Dictionary Items</Name>
       <Alias>dataListUmbracoDictionaryItems</Alias>
@@ -143,7 +159,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>10</SortOrder>
+      <SortOrder>50</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -191,7 +207,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>40</SortOrder>
+      <SortOrder>60</SortOrder>
       <Tab Alias="umbraco/schema">Schema</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
