--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-data.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-data.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="86b65abc-ed84-4fad-af0d-a926f1892aff" Alias="Data List: Data" Level="2">
+<Content Key="86b65abc-ed84-4fad-af0d-a926f1892aff" Alias="Data Sources: Data" Level="2">
   <Info>
     <Parent Key="7a17e1d4-36c6-48b0-971d-d1f09f7ae610">Data List</Parent>
-    <Path>/DataList/DataListData</Path>
+    <Path>/DataList/DataSourcesData</Path>
     <Trashed>false</Trashed>
     <ContentType>contentmentDataListData</ContentType>
     <CreateDate>2025-08-22T19:37:08</CreateDate>
-    <NodeName Default="Data List: Data" />
+    <NodeName Default="Data Sources: Data" />
     <SortOrder>1</SortOrder>
     <Published Default="true" />
     <Schedule />
