--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources.net.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources.net.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="39bc8909-0474-4586-b5fb-015f696eac1a" Alias="Data List: .NET" Level="2">
+<Content Key="39bc8909-0474-4586-b5fb-015f696eac1a" Alias="Data Sources: .NET" Level="2">
   <Info>
     <Parent Key="7a17e1d4-36c6-48b0-971d-d1f09f7ae610">Data List</Parent>
-    <Path>/DataList/DataListNET</Path>
+    <Path>/DataList/DataSourcesNET</Path>
     <Trashed>false</Trashed>
     <ContentType>contentmentDataListDotNet</ContentType>
     <CreateDate>2025-08-22T19:37:00</CreateDate>
-    <NodeName Default="Data List: .NET" />
+    <NodeName Default="Data Sources: .NET" />
     <SortOrder>0</SortOrder>
     <Published Default="true" />
     <Schedule />
