--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/lee-kelleher.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/lee-kelleher.config
@@ -18,7 +18,7 @@
   {
     "key": "bf2cb130-b2ed-4abc-b2d2-ff48d88ec223",
     "mediaKey": "0ab0cc1a-6e3e-4b5b-bf20-5a4a5f0710ab",
-    "mediaTypeAlias": "",
+    "mediaTypeAlias": "Image",
     "crops": [],
     "focalPoint": null
   }
