--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-umbraco.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-umbraco.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="af0a5222-f5e7-4c4a-9927-f571da1f9d39" Alias="Data List: Umbraco" Level="2">
+<Content Key="af0a5222-f5e7-4c4a-9927-f571da1f9d39" Alias="Data Sources: Umbraco" Level="2">
   <Info>
     <Parent Key="7a17e1d4-36c6-48b0-971d-d1f09f7ae610">Data List</Parent>
-    <Path>/DataList/DataListUmbraco</Path>
+    <Path>/DataList/DataSourcesUmbraco</Path>
     <Trashed>false</Trashed>
     <ContentType>contentmentDataListUmbraco</ContentType>
     <CreateDate>2025-08-22T19:37:15</CreateDate>
-    <NodeName Default="Data List: Umbraco" />
+    <NodeName Default="Data Sources: Umbraco" />
     <SortOrder>2</SortOrder>
     <Published Default="true" />
     <Schedule />
