--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-web.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/data-sources-web.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="961926f6-99b6-4f0d-bc46-8a30c6d74b5e" Alias="Data List: Web" Level="2">
+<Content Key="961926f6-99b6-4f0d-bc46-8a30c6d74b5e" Alias="Data Sources: Web" Level="2">
   <Info>
     <Parent Key="7a17e1d4-36c6-48b0-971d-d1f09f7ae610">Data List</Parent>
-    <Path>/DataList/DataListWeb</Path>
+    <Path>/DataList/DataSourcesWeb</Path>
     <Trashed>false</Trashed>
     <ContentType>contentmentDataListWeb</ContentType>
     <CreateDate>2025-08-22T19:37:23</CreateDate>
-    <NodeName Default="Data List: Web" />
+    <NodeName Default="Data Sources: Web" />
     <SortOrder>3</SortOrder>
     <Published Default="true" />
     <Schedule />
