--- a/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/umbracoblocklist.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/ContentTypes/umbracoblocklist.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="4128a049-f8bf-426a-b4ed-e1bd6df03d2c" Alias="contentmentNotes" Level="1">
+<ContentType Key="9a5d0746-e029-4374-a850-41108efbaaea" Alias="umbracoBlockList" Level="1">
   <Info>
-    <Name>Notes</Name>
-    <Icon>icon-autofill color-indigo</Icon>
+    <Name>Umbraco Block List</Name>
+    <Icon>icon-umbraco color-light-blue</Icon>
     <Thumbnail>folder.png</Thumbnail>
-    <Description>A read-only label to display rich-text instructional messages for content editors.</Description>
+    <Description></Description>
     <AllowAtRoot>True</AllowAtRoot>
     <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
@@ -15,24 +15,22 @@
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
     <Compositions />
-    <DefaultTemplate>webPage</DefaultTemplate>
-    <AllowedTemplates>
-      <Template Key="07b5bd24-73d9-40e0-855a-1c1e6b794696">webPage</Template>
-    </AllowedTemplates>
+    <DefaultTemplate></DefaultTemplate>
+    <AllowedTemplates />
   </Info>
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>df5205b7-147f-4bf6-9b33-32b90840f4e0</Key>
-      <Name>Notes: Basic HTML</Name>
-      <Alias>notesBasicHtml</Alias>
-      <Definition>09014506-b1b8-4ce1-a075-b19b74e5a707</Definition>
-      <Type>Umbraco.Community.Contentment.Notes</Type>
+      <Key>ef6f7d54-778e-4cc8-95c4-de1135cc60ab</Key>
+      <Name>Block List</Name>
+      <Alias>blockList</Alias>
+      <Definition>75849c36-cfc2-4881-adf0-7a23edc8a575</Definition>
+      <Type>Umbraco.BlockList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>20</SortOrder>
-      <Tab Alias="notes">Notes</Tab>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="blockList">Block List</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -41,11 +39,11 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>b10178b5-7bc4-4b7d-8c10-d14d031d6531</Key>
-      <Caption>Notes</Caption>
-      <Alias>notes</Alias>
+      <Key>3113a230-be8a-4ec0-a5b6-36263bc41b65</Key>
+      <Caption>Block List</Caption>
+      <Alias>blockList</Alias>
       <Type>Tab</Type>
-      <SortOrder>10</SortOrder>
+      <SortOrder>0</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
