Test site content update

--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/umbraco-property-editors.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/umbraco-property-editors.config
@@ -75,7 +75,39 @@
       "contentTypeKey": "2719fe65-3825-4bd4-b9f7-cc8eef1c2d65",
       "key": "3d88bf5f-58a4-4349-86cd-e7584c1c3664",
       "udi": null,
-      "values": []
+      "values": [
+        {
+          "alias": "dataPickerUmbracoContent",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "umb://document/f415b66916d14302a2505ba2182cc6e4"
+          ]
+        },
+        {
+          "alias": "dataPickerNetCountries",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "DK",
+            "GB"
+          ]
+        },
+        {
+          "alias": "dataPickerUmbracoMembers",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            "umb://member/862c5352bb8f43deab6878364c3fc5b7",
+            "umb://member/498195ca346b49a899d03f1200b85e71",
+            "umb://member/c9fd7b3c215842b9bfe24bb3e078f775",
+            "umb://member/b587c5fe747c4c1ca598dfc39d380f46"
+          ]
+        }
+      ]
     },
     {
       "contentTypeKey": "89392c14-e7ef-4a39-922c-f8aefd690e9a",
