Removed the "external/sortablejs" namespace
I'm unsure how the Umbraco package ecosystem should handle reusing
external libraries. So I don't want to complicate matters just yet.

--- a/src/Umbraco.Community.Contentment.Client/tsconfig.json
+++ b/src/Umbraco.Community.Contentment.Client/tsconfig.json
@@ -26,8 +26,7 @@
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
 		"paths": {
-			"@umbraco-community/contentment": ["./src/index.ts"],
-			"@umbraco-community/backoffice/external/sortablejs": ["./src/sortablejs.ts"]
+			"@umbraco-community/contentment": ["./src/index.ts"]
 		},
 		"types": ["@umbraco-cms/backoffice/extension-types"]
 	},
